--- a/Plugin/NE Science/NE Science.csproj
+++ b/Plugin/NE Science/NE Science.csproj
@@ -28,14 +28,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\SteamApps\common\Kerbal Space Program\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\KSP_0242\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="StationScience">
-      <HintPath>..\..\..\..\..\..\..\Kerbal Space Program Testing\GameData\StationScience\Plugins\StationScience.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\opt\SteamLibrary\SteamApps\common\Kerbal Space Program\GameData.disabled\StationScience\Plugins\StationScience.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\SteamApps\common\Kerbal Space Program\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\KSP_0242\KSP_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
